--- a/mob/plugin.yml
+++ b/mob/plugin.yml
@@ -1,9 +1,10 @@
 main : com.boyboy0710.mob.Main
 name : mob
-version : 1.0.1
+version : 1.2.0
 api-version : 1.16
 
 commands:
   spawn:
   spawn_no_ai:
   reloed_Health:
+  MaxHealth:
